--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -43,10 +43,14 @@ button {
 	border: none !important;
 	height: 37px !important;
 	padding: 5px 15px !important;
-	width: 150px;
+	min-width: 150px;
 	color: #120c05 !important;
 	font-size: 20px !important;
 	outline: none !important;
+}
+
+.btn.disabled, .btn:disabled {
+	opacity: 0.4;
 }
 
 button:hover {
@@ -55,7 +59,9 @@ button:hover {
 }
 
 input {
-	background-color: #3d3829 !important;
+	background-color: transparent !important;
+	background-image: url("../assets/images/inputBg.png");
+	background-size: 100% 100%;
 	height: 50px !important;
 	border-radius: 0 !important;
 	border:none !important;
@@ -85,6 +91,19 @@ input {
 
 hr {
 	border-color: #f5f5f2;
+}
+
+.gradient-bg {
+	background-image: url("../assets/images/gradientBg.png");
+	background-size: 100% 100%;
+}
+
+.left-edge {
+	left: -50%;
+	top: 0;
+	width: 150%;
+	height: 41px;
+	opacity: 0.3;
 }
 
 .c-menu-info {
