--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -44,6 +44,16 @@ button:hover {
 	box-shadow: 0px 5px 41px -2px rgba(255, 255, 255, 0.4);
 }
 
+.c-add-btn {
+	max-width: 45px !important;
+	width: 35px !important;
+	min-width: 35px !important;
+	height: 35px !important;
+	top: 7px;
+	text-align: center;
+	background-image: url("../assets/images/plusBg.png") !important;
+}
+
 
 p {
 	font-size: 14px;
@@ -111,6 +121,22 @@ input {
 
 .w-50 {
 	width: 50%;
+}
+
+.w-40 {
+	width: 40%;
+}
+
+.w-30 {
+	width: 30%;
+}
+
+.w-20 {
+	width: 20% !important;
+}
+
+.w-10 {
+	width: 10%;
 }
 
 hr {
@@ -213,4 +239,62 @@ hr {
 	    right: 0px;
 	    top: 1px;
 	}
+}
+
+.c-filter-links {
+	a {
+		padding: 0 10px;
+		font-size: 18px;
+		opacity: 0.4;
+		// line-height: 15px;
+	}
+
+	a.active {
+		opacity: 1;
+	}
+
+
+	a:not(:last-child) {
+		border-right: 0.1em solid #fff5af;
+	}
+}
+
+.table {
+	border-bottom: 1px solid #d8dbe0;
+	th, td, div, p {
+		color: $text-default;
+	}
+	th {
+		font-weight: 400;
+	}
+	th:not(:first-child) {
+		font-weight: 400;
+		text-align: center;
+	}
+	td {
+		text-align: center;
+		font-size: 18px;
+		vertical-align: middle;
+		padding-top: 15px;
+		padding-bottom: 15px;
+	}
+	th {
+		border-top: none;
+	}
+}
+
+ul.pagination {
+	justify-content: flex-end !important;
+	a {
+		background-color: transparent !important;
+		border: none;
+		font-size: 18px !important;
+		margin: 0 10px;
+	}
+	li.active {
+		a {
+			background-color: #3d3629 !important; 
+		}
+	}
+	
 }
