--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -135,8 +135,16 @@ input {
 	width: 20% !important;
 }
 
+.w-15 {
+	width: 15%;
+}
+
 .w-10 {
 	width: 10%;
+}
+
+.w-5 {
+	width: 5%;
 }
 
 hr {
@@ -154,6 +162,14 @@ hr {
 	width: 150%;
 	height: 35px;
 	opacity: 0.3;
+}
+
+.modal-content {
+	background-color: #2c2a26 !important;
+}
+
+.modal-body {
+	color: $text-default;
 }
 
 .c-menu-info {
@@ -218,6 +234,8 @@ hr {
 .c-default-layout header {
 	background: transparent;
 	border-bottom: none;
+	position: relative;
+	z-index: 99;
 
 	img.logo {
 		width: 100%;
