--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -78,6 +78,11 @@ p {
 	color: $text-default-light !important; 
 }
 
+.text-yellow {
+	color: #ffd800 !important;
+	font-size: 28px !important;
+}
+
 .text-coupon {
 	opacity: 0.5;
 	text-decoration: line-through;
@@ -90,6 +95,13 @@ a:hover {
 
 .form-group label {
 	font-size: 20px;
+}
+
+.social-icons {
+	a {
+		text-decoration: none;
+		font-size: 18px;
+	}
 }
 
 input {
@@ -151,6 +163,27 @@ hr {
 	border-color: #f5f5f2;
 }
 
+.modal {
+	border: none !important;
+	box-shadow: none;
+	// display: flex !important;
+	margin-top: 8%;
+	align-items: center;
+}
+.modal-dialog {
+	// max-width: 600px !important;
+}
+.modal-content {
+	background-color: transparent !important;
+	border: none;
+	
+	.medallion-modal {
+		border: none;
+		background-image: url('../assets/images/modalBg.png');
+		background-size: 100% 100%;
+	}
+}
+
 .gradient-bg {
 	background-image: url("../assets/images/gradientBg.png");
 	background-size: 100% 100%;
@@ -165,7 +198,11 @@ hr {
 }
 
 .modal-content {
-	background-color: #2c2a26 !important;
+	// background-color: #2c2a26 !important;
+}
+
+.modal-backdrop.show {
+	opacity: 0 !important;
 }
 
 .modal-body {
