--- a/src/components/carousel/style.scss
+++ b/src/components/carousel/style.scss
@@ -34,20 +34,20 @@ $black: #161616;
     flex-direction: column;
     position: absolute;
     transition: all 0.5s ease;
-    width: 25rem;
+    width: 35rem;
     // slide item initial state
     &.s4 {
       transform: translateX(-60rem);
       opacity: 0;
     }
     &.s5 {
-      transform: translateX(-30rem);
+      transform: translateX(-38rem);
     }
     &.s1 {
       transform: translateX(0);
     }
     &.s2 {
-      transform: translateX(30rem);
+      transform: translateX(38rem);
     }
     &.s3 {
       transform: translateX(60rem);
@@ -64,22 +64,18 @@ $black: #161616;
       &:after {
         opacity: 1;
       }
-
-      img {
-        transform: scale(1.3);
-      }
     }
     img {
       transition: all 0.5s ease;
     }
 
     img {
-      object-fit: cover;
       width: 100%;
       transition: all 0.5s ease;
-      filter: grayscale(1);
+      // filter: grayscale(1);
+      opacity: 0.4;
       &.active {
-        filter: none;
+        opacity: 1;
       }
     }
   }
