--- a/src/views/rights/style.scss
+++ b/src/views/rights/style.scss
@@ -1,8 +1,5 @@
 .rights-page {
-	.medallion-modal {
-		background-image: url('../../assets/images/modalBg.png');
-	}
-
+	
 	.medallions-diagram {
 		.medallions-holder {
 			background-image: url('../../assets/images/holder.png');
@@ -13,18 +10,19 @@
 		}
 
 		.medallion-item {
-			width: 97%;
+			width: 94%;
 			margin: 0 auto;
 			height: 50px;
 			background-size: 100% 100%;
 			margin-bottom: 3px;
+			cursor: pointer;
 		}
 
-		.medallion-item.done {
+		.medallion-item.lock {
 			background-image: url('../../assets/images/VmedallionDone.png');
 		}
 
-		.medallion-item.current {
+		.medallion-item.burn {
 			background-image: url('../../assets/images/VmedallionCurrent.png');
 		}
 	}
@@ -117,7 +115,7 @@
 				cursor: pointer;
 			}
 
-			.cell.done {
+			.cell.lock {
 				background-image: url('../../assets/images/HmedallionDone.png');
 				height: 41px;
 				margin-top: -3px;
@@ -125,7 +123,7 @@
 				margin-left: 38px;
 			}
 
-			.cell.current {
+			.cell.burn {
 				background-image: url('../../assets/images/HmedallionCurrent.png');
 				margin-top: 1px;
 				height: 33px;
